discussion/kv_engine/153825/153825_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46360: Add AArch64 support for TaggedPtr

AArch64 has the same 48 bits of "real" pointer bits as x86-64. Prior
to this change we see a compile error on AArch64:

    ../kv_engine/engines/ep/src/item.h: In member function 'void Item::setData(const char*, size_t)':
    ../kv_engine/engines/ep/src/item.h:598:44: error: 'TaggedPtrBase' was not declared in this scope; did you mean 'TaggedPtr'?
      598 |         replaceValue(TaggedPtr<Blob>(data, TaggedPtrBase::NoTagValue));
          |                                            ^~~~~~~~~~~~~
          |                                            TaggedPtr

Change-Id: Icb118e428313230f3e295eb2417464f087de9e1d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-05-18 15:55:06.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-18 16:32:45.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7554/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/tagged_ptr.h b/engines/ep/src/tagged_ptr.h
index 624c279f5..8eb7994c9 100644
--- a/engines/ep/src/tagged_ptr.h
+++ b/engines/ep/src/tagged_ptr.h
@@ -13,7 +13,8 @@
 
 #include &lt;memory&gt;
 
-#if (defined(__x86_64__) || defined(_M_X64) || defined(__s390x__) || defined(__aarch64__))
+#if (defined(__x86_64__) || defined(_M_X64) || defined(__s390x__) || \
+     defined(__aarch64__))
 
 class TaggedPtrBase {
 public:

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7554/ )

Compile error at     ../kv_engine/engines/ep/src/item.h:598:44:
error: "TaggedPtrBase" was not declared in this scope; did you mean "TaggedPtr"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7554/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35862/ : FAILURE

Compile error at     ../kv_engine/engines/ep/src/item.h:598:44:
error: "TaggedPtrBase" was not declared in this scope; did you mean "TaggedPtr"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35862/ )

Link error: fatal error LNK1180: insufficient disk space to complete link ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35862/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18508/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18508/ )

Undefined Sanitizer: meta...../kv_engine/engines/ep/src/vb_count_visitor.h:56:27: runtime error: 1.84467e+21 is outside the range of representable values of type "unsigned long" ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18508/ )

Test exceeded the timeout:
[2021-05-18T16:20:02.003Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18508/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9001/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30657/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10557/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10956/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9625/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10697/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
